Fix for bottom buttons invisible in TOP 100

--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@
 
 #ewsTop100List_wrapper {
   width: 100%;
-  height: 636px;
+  height: 586px;
 }
 
 #ewsTop100List {
@@ -315,7 +315,7 @@
 }
 
 #ewsTop100List div {
-  height: 630px;
+  height: 580px;
   overflow-y: auto;
 }
 
